commit btn animate

--- a/views/ThreeSquirrels.ejs
+++ b/views/ThreeSquirrels.ejs
@@ -136,10 +136,10 @@
 					
 					
 				</div>
-				<a href="javascript:;" class=" photo_btn" id="getMore">
+				<a href="javascript:;" class=" photo_btn animated fadeInDown" id="getMore">
 					<img src="/image/getmore.png" alt="">
 				</a>
-				<a href="javascript:;" class="photo_btn" id="toBuy">
+				<a href="javascript:;" class="photo_btn animated fadeInDown" id="toBuy">
 					<img src="/image/tobuy.png" alt="">
 				</a>
 				<!-- <img src="/image/photo_1.png" alt="" class="photo_img animated fadeInDown" > -->
